fix image visibility issue

--- a/css/style.css
+++ b/css/style.css
@@ -257,12 +257,12 @@ body {
     height: 1rem;
     width: 1rem;
     margin-right: .7rem;
-    background-image: url("/img/chevron-thin-right.svg");
+    background-image: url("img/chevron-thin-right.svg");
     background-size: cover;
     background-color: var(--color-primary);
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-image: url(..img/chevron-thin-right.svg);
     -webkit-mask-size: cover;
-    mask-image: url(../img/chevron-thin-right.svg);
+    mask-image: url(..img/chevron-thin-right.svg);
     mask-size: cover;
     background-image: none; }
 
